--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -158,16 +158,16 @@
         <div class="podcast-table">
           <div id="w-node-_96429d68-9f72-22d1-4492-59049a6d08b3-cfe2eca5" class="rectangle left-bottom"></div>
         <div class="podcasts-text-wrapper">
-           <!--   <p class="uppercase-paragraph">listen our latest podcasts</p>
-          -->  <div class="rectangle left-bottom"></div>
+      <p class="uppercase-paragraph">حيث يبدأ النجاح، ونرسم الطريق للاحتراف</p>
+           <div class="rectangle left-bottom"></div>
             <div class="rectangle right-top"></div>
             <div class="rectangle right-bottom"></div>
             <div class="rectangle left"></div>
           </div>
-  <!--          <div class="podcasts-title-wrapper">
+        <div class="podcasts-title-wrapper">
             <h2 data-w-id="96429d68-9f72-22d1-4492-59049a6d08bc" style="opacity:0" class="podcast-title"><span class="brand-color-span">التواجد معا هو البداية ، البقاء معا هو التقدم ،العمل معا هو النجاح.</span></h2>
-            <a href="#" data-w-id="e5ead898-ab4c-7704-72a4-e4bf8515f53e" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block w-lightbox"><img src="images/play-1.svg" loading="lazy" style="filter:invert(0%)" alt="Play Icon" class="play-icon">
-              <h6 style="color:rgb(14,14,14)" class="button-text">Listen Podcasts</h6>
+            <a href="https://vsportksa.com" target="_blank" data-w-id="e5ead898-ab4c-7704-72a4-e4bf8515f53e" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block"><img src="images/play-1.svg" loading="lazy" style="filter:invert(0%)" alt="Play Icon" class="play-icon">
+              <h6 style="color:rgb(14,14,14)" class="button-text">زيارة الموقع</h6>
               <script type="application/json" class="w-json">{
   "items": [
     {
@@ -182,7 +182,7 @@
   ],
   "group": ""
 }
--->
+
 </script>
             </a>
           </div>
@@ -257,7 +257,7 @@
       </div>
     </div>
   </section>
- <!-- <section class="section">
+ <section class="section">
     <div class="w-layout-blockcontainer base-container home-3-news-title-container w-container">
       <h2 data-w-id="91622db5-a811-0a4f-f604-248f29583282" style="opacity:0">Latest team updates</h2>
     </div>
@@ -329,7 +329,7 @@
         </div>
       </div>
     </div>
-  </section>-->
+  </section>
   <section class="section">
     <div class="w-layout-blockcontainer full-width-container partners-block-container w-container">
       <div class="partners-wrapper home-3-partners">
