--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="about-us-banner-section">
     <div class="w-layout-blockcontainer base-container about-us-banner-container w-container">
       <h1 data-w-id="a0a2afc2-1509-681a-b464-35f50d79df27" style="opacity:0" class="about-us-banner-title">حيث تتحد الرياضة والتحفيز والمجتمع لإلهام العظمة.</h1>
-      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph">وكالة سبروتس فيزين هي واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
+      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph">وكالة سبروتس فيجين هي واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
       <div data-w-id="d19ef250-a979-21ae-c496-41b1c7b8ff62" style="opacity:0" class="banner-buttons-wrapper">
         <a href="contact-us-rtl.html" class="primary-button w-button">تواصل معنا</a>
       </div>
