--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="about-us-banner-section">
     <div class="w-layout-blockcontainer base-container about-us-banner-container w-container">
       <h1 data-w-id="a0a2afc2-1509-681a-b464-35f50d79df27" style="opacity:0" class="about-us-banner-title">حيث تتحد الرياضة والتحفيز والمجتمع لإلهام العظمة.</h1>
-      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph">وكالة سبروتس فيجين هي واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
+      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph">وكالة سبروتس فيجينهي واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
       <div data-w-id="d19ef250-a979-21ae-c496-41b1c7b8ff62" style="opacity:0" class="banner-buttons-wrapper">
         <a href="contact-us-rtl.html" class="primary-button w-button">تواصل معنا</a>
       </div>
@@ -129,10 +129,6 @@
           <h3 data-w-id="7a345fab-f225-2243-7058-d7f93bb169f4" style="opacity:0">التطوير الثقافي و الفني </h3>
           <p data-w-id="7a345fab-f225-2243-7058-d7f93bb169f6" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم دورات تدريبية وفنية تركز على مجموعة من الجوانب التيتساعد اللاعبين على فهم اللعبة بشكل أعمق وتحسن مهاراتهم الفنية والتكتيكية والتواصلية. </p>
         </div>
-        <div id="w-node-a1dade93-506e-c2c8-b2ec-c29b59a099ce-cfe2eca5" class="about-us-mission-card"><img src="images/users-01.svg" loading="lazy" style="opacity:0" data-w-id="a1dade93-506e-c2c8-b2ec-c29b59a099cf" alt="" class="our-mission-icon">
-          <h3 data-w-id="a1dade93-506e-c2c8-b2ec-c29b59a099d0" style="opacity:0">التطوير الثقافي و الفني </h3>
-          <p data-w-id="a1dade93-506e-c2c8-b2ec-c29b59a099d2" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم دورات تدريبية وفنية تركز على مجموعة من الجوانب التيتساعد اللاعبين على فهم اللعبة بشكل أعمق وتحسن مهاراتهم الفنية والتكتيكية والتواصلية. </p>
-        </div>
         <div id="w-node-_964c3ce8-62eb-6edd-c518-60e8ec91cfb8-cfe2eca5" class="about-us-mission-card"><img src="images/users-01.svg" loading="lazy" style="opacity:0" data-w-id="964c3ce8-62eb-6edd-c518-60e8ec91cfb9" alt="" class="our-mission-icon">
           <h3 data-w-id="964c3ce8-62eb-6edd-c518-60e8ec91cfba" style="opacity:0">الدعم النفسي و الاجتماعي</h3>
           <p data-w-id="964c3ce8-62eb-6edd-c518-60e8ec91cfbc" style="opacity:0" class="paragraph-large mission-card-paragraph">لبناء ثقافة اللاعب ومهاراتهً الشخصية نقدم دعما نفسياً شاملا للاعبين من خلالًواجتماعي ااستشارات متخصصة تهدف إلىتمكينهم من تجاوز التحديات فيمسيرتهم الرياضية وصقل قدراتهمالنفسية والاجتماعية ، مما يساعدهمعلى التعامل مع الضغوطات ويزيدمن قدرتهم على الأداء. ويكونذلك بتصميم برامج مخصصة لتعزيز الصحة العقلية و الرفاهية العامة بهدف تحقيق التوازن النفسي والاجتماعي</p>
@@ -141,21 +137,9 @@
           <h3 data-w-id="388cb716-aef3-8586-70da-16ce02a54d00" style="opacity:0">التطويرالذهني و البدني</h3>
           <p data-w-id="388cb716-aef3-8586-70da-16ce02a54d02" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم خطة تدريب ذهني وبدني شاملة للاعبين، تشمل جلسات أسبوعية على مدار أشهر مع توجيهات عملية واختبارات لتعزيز التركيز والتعامل مع الفوز والخسارة. كما نوفر برامج تدريب بدني مخصصة بإشراف معدين متميزين، مع تقييمات شاملة ونصائح غذائية لتحقيق أداء متميز خلال الموسم والمنافسات.</p>
         </div>
-        <div id="w-node-_30b127a2-48b9-e26f-6361-033280dae523-cfe2eca5" class="about-us-mission-card"><img src="images/users-01.svg" loading="lazy" style="opacity:0" data-w-id="30b127a2-48b9-e26f-6361-033280dae524" alt="" class="our-mission-icon">
-          <h3 data-w-id="30b127a2-48b9-e26f-6361-033280dae525" style="opacity:0">التطويرالذهني و البدني</h3>
-          <p data-w-id="30b127a2-48b9-e26f-6361-033280dae527" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم خطة تدريب ذهني وبدني شاملة للاعبين، تشمل جلسات أسبوعية على مدار أشهر مع توجيهات عملية واختبارات لتعزيز التركيز والتعامل مع الفوز والخسارة. كما نوفر برامج تدريب بدني مخصصة بإشراف معدين متميزين، مع تقييمات شاملة ونصائح غذائية لتحقيق أداء متميز خلال الموسم والمنافسات.</p>
-        </div>
         <div id="w-node-b2645981-2fe1-772e-7a93-305eb6b37487-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="b2645981-2fe1-772e-7a93-305eb6b37488" alt="" class="our-mission-icon">
           <h3 data-w-id="b2645981-2fe1-772e-7a93-305eb6b37489" style="opacity:0" class="heading-4">إدارة الاستثمارات المالية</h3>
           <p data-w-id="b2645981-2fe1-772e-7a93-305eb6b3748b" style="opacity:0" class="paragraph-large mission-card-paragraph">نركز على تنمية الاستثمارات من خلال استثمار الدخل بطرقمستدامة ومربحة وهي جهود تهدف إلى تحقيق عوائد مالية جيدةوضمان مستقبل مالي آمن للاعب، مما يعزز استقراره بعدانتهء مسيرته الرياضية تشمل استراتيجياتنا الاستثمار فيشركات تطوير عقاري موثوقة ذات عوائد مميزة، بالإضافة إلى الاستثمار في سوق الأسهم والسندات. وستوفر هذه الخيارات فرصا متنوعة للاعبين لتحقيق النمو المالي المستدامًوتعزيز أمنهم المالي على المدى الطويل</p>
-        </div>
-        <div id="w-node-_966931b5-8973-1af7-3795-9307d85d914a-cfe2eca5" class="about-us-mission-card"><img src="images/users-01.svg" loading="lazy" style="opacity:0" data-w-id="966931b5-8973-1af7-3795-9307d85d914b" alt="" class="our-mission-icon">
-          <h3 data-w-id="966931b5-8973-1af7-3795-9307d85d914c" style="opacity:0">التطويرالذهني و البدني</h3>
-          <p data-w-id="966931b5-8973-1af7-3795-9307d85d914e" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم خطة تدريب ذهني وبدني شاملة للاعبين، تشمل جلسات أسبوعية على مدار أشهر مع توجيهات عملية واختبارات لتعزيز التركيز والتعامل مع الفوز والخسارة. كما نوفر برامج تدريب بدني مخصصة بإشراف معدين متميزين، مع تقييمات شاملة ونصائح غذائية لتحقيق أداء متميز خلال الموسم والمنافسات.</p>
-        </div>
-        <div id="w-node-_4322ca2c-6aec-11d2-3348-2c78730a565d-cfe2eca5" class="about-us-mission-card"><img src="images/users-01.svg" loading="lazy" style="opacity:0" data-w-id="4322ca2c-6aec-11d2-3348-2c78730a565e" alt="" class="our-mission-icon">
-          <h3 data-w-id="4322ca2c-6aec-11d2-3348-2c78730a565f" style="opacity:0">التطويرالذهني و البدني</h3>
-          <p data-w-id="4322ca2c-6aec-11d2-3348-2c78730a5661" style="opacity:0" class="paragraph-large mission-card-paragraph">نقدم خطة تدريب ذهني وبدني شاملة للاعبين، تشمل جلسات أسبوعية على مدار أشهر مع توجيهات عملية واختبارات لتعزيز التركيز والتعامل مع الفوز والخسارة. كما نوفر برامج تدريب بدني مخصصة بإشراف معدين متميزين، مع تقييمات شاملة ونصائح غذائية لتحقيق أداء متميز خلال الموسم والمنافسات.</p>
         </div>
         <div id="w-node-_53f27ac1-bff0-7068-5c7c-48cec2eaeb03-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="53f27ac1-bff0-7068-5c7c-48cec2eaeb04" alt="" class="our-mission-icon">
           <h3 data-w-id="53f27ac1-bff0-7068-5c7c-48cec2eaeb05" style="opacity:0">ادارة الاعلام</h3>
@@ -164,26 +148,6 @@
         <div id="w-node-fba222f5-410f-f141-7152-db1c9b844d39-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="fba222f5-410f-f141-7152-db1c9b844d3a" alt="" class="our-mission-icon">
           <h3 data-w-id="fba222f5-410f-f141-7152-db1c9b844d3b" style="opacity:0">تنمية العلاقات الدولية</h3>
           <p data-w-id="fba222f5-410f-f141-7152-db1c9b844d3d" style="opacity:0" class="paragraph-large mission-card-paragraph">نولي أهمية كبيرة لتنمية العلاقات الدولية من خلال التعاون مع أندية ووكالات عالمية، مما يفتح آفاقًا لفرص احترافية للاعبين. نعمل على إقامة شراكات استراتيجية لتوفير فرص جديدة في الأسواق العالمية، توسيع تجاربهم الاحترافية، وتمكينهم من تحقيق طموحاتهم الرياضية. وفي هذا الإطار، نتعاون مع مكتب أندريس السويدي، أحد أفضل 20 وكالة عالميًا، لتقديم فرص احترافية متميزة.</p>
-        </div>
-        <div id="w-node-b2645981-2fe1-772e-7a93-305eb6b37469-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="b2645981-2fe1-772e-7a93-305eb6b3746a" alt="" class="our-mission-icon">
-          <h3 data-w-id="b2645981-2fe1-772e-7a93-305eb6b3746b" style="opacity:0">ادارة الاعلام</h3>
-          <p data-w-id="b2645981-2fe1-772e-7a93-305eb6b3746d" style="opacity:0" class="paragraph-large mission-card-paragraph">تعمل الوكالة على تعزيز ظهور اللاعب في وسائلالإعلام من خلال استراتيجيات تسويقية مبتكرةوتسهيل مشاركتهم في البرامج والمقابلات. كماتدير حساباتهم على وسائل التواصل الاجتماعي لزيادة تفاعلهم مع الجمهور وبناء علامة تجارية قوية،مما تجذب اهتمام الأندية والرعاة المحتملين وتعزيزفرص النجاح المهني للاعب</p>
-        </div>
-        <div id="w-node-c7d3cd86-6634-fd69-86e0-bd78ccf284f2-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="c7d3cd86-6634-fd69-86e0-bd78ccf284f3" alt="" class="our-mission-icon">
-          <h3 data-w-id="c7d3cd86-6634-fd69-86e0-bd78ccf284f4" style="opacity:0">تنمية العلاقات الدولية</h3>
-          <p data-w-id="c7d3cd86-6634-fd69-86e0-bd78ccf284f6" style="opacity:0" class="paragraph-large mission-card-paragraph">نولي أهمية كبيرة لتنمية العلاقات الدولية من خلال التعاون مع أندية ووكالات عالمية، مما يفتح آفاقًا لفرص احترافية للاعبين. نعمل على إقامة شراكات استراتيجية لتوفير فرص جديدة في الأسواق العالمية، توسيع تجاربهم الاحترافية، وتمكينهم من تحقيق طموحاتهم الرياضية. وفي هذا الإطار، نتعاون مع مكتب أندريس السويدي، أحد أفضل 20 وكالة عالميًا، لتقديم فرص احترافية متميزة.</p>
-        </div>
-        <div id="w-node-fa42506b-75e2-2436-0cd9-77723f2a9cbd-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="fa42506b-75e2-2436-0cd9-77723f2a9cbe" alt="" class="our-mission-icon">
-          <h3 data-w-id="fa42506b-75e2-2436-0cd9-77723f2a9cbf" style="opacity:0">تنمية العلاقات الدولية</h3>
-          <p data-w-id="fa42506b-75e2-2436-0cd9-77723f2a9cc1" style="opacity:0" class="paragraph-large mission-card-paragraph">نولي أهمية كبيرة لتنمية العلاقات الدولية من خلال التعاون مع أندية ووكالات عالمية، مما يفتح آفاقًا لفرص احترافية للاعبين. نعمل على إقامة شراكات استراتيجية لتوفير فرص جديدة في الأسواق العالمية، توسيع تجاربهم الاحترافية، وتمكينهم من تحقيق طموحاتهم الرياضية. وفي هذا الإطار، نتعاون مع مكتب أندريس السويدي، أحد أفضل 20 وكالة عالميًا، لتقديم فرص احترافية متميزة.</p>
-        </div>
-        <div id="w-node-_93d62e5e-037e-f281-d4ca-ff2a0b38f340-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="93d62e5e-037e-f281-d4ca-ff2a0b38f341" alt="" class="our-mission-icon">
-          <h3 data-w-id="93d62e5e-037e-f281-d4ca-ff2a0b38f342" style="opacity:0">تنمية العلاقات الدولية</h3>
-          <p data-w-id="93d62e5e-037e-f281-d4ca-ff2a0b38f344" style="opacity:0" class="paragraph-large mission-card-paragraph">نولي أهمية كبيرة لتنمية العلاقات الدولية من خلال التعاون مع أندية ووكالات عالمية، مما يفتح آفاقًا لفرص احترافية للاعبين. نعمل على إقامة شراكات استراتيجية لتوفير فرص جديدة في الأسواق العالمية، توسيع تجاربهم الاحترافية، وتمكينهم من تحقيق طموحاتهم الرياضية. وفي هذا الإطار، نتعاون مع مكتب أندريس السويدي، أحد أفضل 20 وكالة عالميًا، لتقديم فرص احترافية متميزة.</p>
-        </div>
-        <div id="w-node-_7493cc2e-f7b4-bde4-0603-aa9bf4222e41-cfe2eca5" class="about-us-mission-card"><img src="images/love.svg" loading="lazy" style="opacity:0" data-w-id="7493cc2e-f7b4-bde4-0603-aa9bf4222e42" alt="" class="our-mission-icon">
-          <h3 data-w-id="7493cc2e-f7b4-bde4-0603-aa9bf4222e43" style="opacity:0">تنمية العلاقات الدولية</h3>
-          <p data-w-id="7493cc2e-f7b4-bde4-0603-aa9bf4222e45" style="opacity:0" class="paragraph-large mission-card-paragraph">نولي أهمية كبيرة لتنمية العلاقات الدولية من خلال التعاون مع أندية ووكالات عالمية، مما يفتح آفاقًا لفرص احترافية للاعبين. نعمل على إقامة شراكات استراتيجية لتوفير فرص جديدة في الأسواق العالمية، توسيع تجاربهم الاحترافية، وتمكينهم من تحقيق طموحاتهم الرياضية. وفي هذا الإطار، نتعاون مع مكتب أندريس السويدي، أحد أفضل 20 وكالة عالميًا، لتقديم فرص احترافية متميزة.</p>
         </div>
       </div>
     </div>
@@ -194,16 +158,16 @@
         <div class="podcast-table">
           <div id="w-node-_96429d68-9f72-22d1-4492-59049a6d08b3-cfe2eca5" class="rectangle left-bottom"></div>
         <div class="podcasts-text-wrapper">
-           <!--   <p class="uppercase-paragraph">listen our latest podcasts</p>
-          -->  <div class="rectangle left-bottom"></div>
+      <p class="uppercase-paragraph">حيث يبدأ النجاح، ونرسم الطريق للاحتراف</p>
+           <div class="rectangle left-bottom"></div>
             <div class="rectangle right-top"></div>
             <div class="rectangle right-bottom"></div>
             <div class="rectangle left"></div>
           </div>
-  <!--          <div class="podcasts-title-wrapper">
+        <div class="podcasts-title-wrapper">
             <h2 data-w-id="96429d68-9f72-22d1-4492-59049a6d08bc" style="opacity:0" class="podcast-title"><span class="brand-color-span">التواجد معا هو البداية ، البقاء معا هو التقدم ،العمل معا هو النجاح.</span></h2>
-            <a href="#" data-w-id="e5ead898-ab4c-7704-72a4-e4bf8515f53e" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block w-lightbox"><img src="images/play-1.svg" loading="lazy" style="filter:invert(0%)" alt="Play Icon" class="play-icon">
-              <h6 style="color:rgb(14,14,14)" class="button-text">Listen Podcasts</h6>
+            <a href="https://vsportksa.com" target="_blank" data-w-id="e5ead898-ab4c-7704-72a4-e4bf8515f53e" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block"><img src="images/play-1.svg" loading="lazy" style="filter:invert(0%)" alt="Play Icon" class="play-icon">
+              <h6 style="color:rgb(14,14,14)" class="button-text">زيارة الموقع</h6>
               <script type="application/json" class="w-json">{
   "items": [
     {
@@ -218,7 +182,7 @@
   ],
   "group": ""
 }
--->
+
 </script>
             </a>
           </div>
@@ -226,6 +190,7 @@
         <div class="rectangle right-top"></div>
         <div class="rectangle right-bottom"></div>
       </div>
+      
       <div class="absolute-photo-wrapper"></div>
     </div>
   </section>
@@ -293,7 +258,7 @@
       </div>
     </div>
   </section>
- <!-- <section class="section">
+ <section class="section">
     <div class="w-layout-blockcontainer base-container home-3-news-title-container w-container">
       <h2 data-w-id="91622db5-a811-0a4f-f604-248f29583282" style="opacity:0">Latest team updates</h2>
     </div>
@@ -365,7 +330,7 @@
         </div>
       </div>
     </div>
-  </section>-->
+  </section>
   <section class="section">
     <div class="w-layout-blockcontainer full-width-container partners-block-container w-container">
       <div class="partners-wrapper home-3-partners">
