--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -227,7 +227,7 @@
       <div class="our-team-block"><img src="images/Union-1.png" loading="lazy" alt="" class="our-team-decoration"><img class="our-team-image" src="images/Mask-group-3.png" alt="Basketball game" style="opacity:0" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" data-w-id="f78fcca6-9375-b57a-2701-c67d3f70d33e" loading="lazy" srcset="images/Mask-group-3-p-500.png 500w, images/Mask-group-3.png 946w">
         <div class="our-team-text-wrapper">
           <h2 class="about-us-heading">فريقنا</h2>
-          <p class="paragraph-large">وراء سبورب فيجين يقف فريق متفانٍ من الأفراد المتحمسين للرياضة، التحفيز، وخلق تأثير إيجابي. تعرف على الأشخاص الذين يقودون مهمتنا نحو الأمام.</p>
+          <p class="paragraph-large">وراء سبورت فيجين يقف فريق متفانٍ من الأفراد المتحمسين للرياضة، التحفيز، وخلق تأثير إيجابي. تعرف على الأشخاص الذين يقودون مهمتنا نحو الأمام.</p>
         </div>
         <div class="w-layout-grid our-team-table">
           <div data-w-id="f3b42426-7c36-88f5-7a36-420e175e0e4b" style="opacity:0" class="team-member-wrapper"><img src="images/قاسم-المطيري.png" loading="lazy" alt="A man in a black T-shirt" class="team-member-photo">
