--- a/home-3-rtl-backup.html
+++ b/home-3-rtl-backup.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 26 2025 22:36:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 26 2025 22:36:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68346fa9219ebb768aba9450" data-wf-site="6822c54974afef131c86bfa5" lang="en">
 <head>
   <meta charset="utf-8">
@@ -3087,10 +3087,10 @@
             <div class="elementor-counter">
               <div class="elementor-counter-number-wrapper">
                 <span class="elementor-counter-number-prefix">+</span>
-                <span class="elementor-counter-number" data-duration="2000" data-to-value="18" data-from-value="0" data-delimiter=",">0</span>
+                <span class="elementor-counter-number" data-duration="2000" data-to-value="60" data-from-value="0" data-delimiter=",">0</span>
                 <span class="elementor-counter-number-suffix"></span>
               </div>
-              <div class="elementor-counter-title">نادي</div>
+              <div class="elementor-counter-title">لاعب مشترك</div>
             </div>
           </div>
         </div>
@@ -3100,10 +3100,10 @@
             <div class="elementor-counter">
               <div class="elementor-counter-number-wrapper">
                 <span class="elementor-counter-number-prefix">+</span>
-                <span class="elementor-counter-number" data-duration="2000" data-to-value="60" data-from-value="0" data-delimiter=",">0</span>
+                <span class="elementor-counter-number" data-duration="2000" data-to-value="18" data-from-value="0" data-delimiter=",">0</span>
                 <span class="elementor-counter-number-suffix"></span>
               </div>
-              <div class="elementor-counter-title">لاعب مشترك</div>
+              <div class="elementor-counter-title">نادي</div>
             </div>
           </div>
         </div>
@@ -3115,7 +3115,7 @@
       <div class="home-3-left-triangle"></div><img src="images/Background-pattern.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Background-pattern-p-500.png 500w, images/Background-pattern-p-800.png 800w, images/Background-pattern-p-1080.png 1080w, images/Background-pattern-p-1600.png 1600w, images/Background-pattern.png 1920w" alt="" class="background-pattern">
       <div class="home-3-banner-text-wrapper">
         <h1 data-w-id="27c8e722-889f-2060-cee6-782bcdace744" class="home-3-hero-screen-heading">‍<strong>نطمح لان نكون </strong><span class="text-span-3"><strong>افضل </strong></span><strong>شركة رياضية مختصة في وكالة اللاعيبين</strong></h1>
-        <p data-w-id="78f05579-6cf4-99c6-0595-c8f476d335f0" class="paragraph-large text-center">وكالة سبروتس فيجيني واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p>
+        <p data-w-id="78f05579-6cf4-99c6-0595-c8f476d335f0" class="paragraph-large text-center"><span class="text-span-9">نحن </span>واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة.<br>اعتمادنا الرسمي يجعلنا ضمن نخبة الوكالات المعترف بها عالميًا في إدارة مسيرة اللاعبين باحتراف.</p>
         <div data-w-id="2ac63b08-c0e3-20ad-117c-2df62c6aaec0" class="banner-buttons-wrapper home-3-banner-buttons">
           <a href="about-us.html" class="secondary-button home-3-secondary-button w-button">تواصل معنا</a>
         </div>
