--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
     <!-- Brand Overlay -->
     <div class="brand-overlay">
       <img src="images/Sports-vision-logo.svg" alt="Sports Vision Logo" class="brand-logo">
-      <h1 class="brand-title">سبورت فيجن</h1>
+      <h1 class="brand-title"> سبورتسفيجن</h1>
       <p class="brand-slogan">
         <span class="brand-accent">حيث يبدأ النجاح،</span><br>
         ونرسم الطريق للاحتراف.
