--- a/contact-us-rtl.html
+++ b/contact-us-rtl.html
@@ -419,7 +419,6 @@
           <!-- Mobile Navigation Links -->
           <div class="mobile-nav-links">
             <a href="contact-us-rtl.html" class="nav-link mobile-nav-link">تواصل معنا</a>
-            <a href="our-ownership-rlt.html" class="nav-link mobile-nav-link">الادارة</a>
             <a href="our-players-rtl.html" class="nav-link mobile-nav-link">لاعبينا</a>
             <a href="about-us-rtl.html" aria-current="page" class="nav-link mobile-nav-link w--current">الوكالة</a>
             <a href="home-3-rtl.html" class="nav-link mobile-nav-link">الصفحة الرئيسية</a>
@@ -427,7 +426,6 @@
         </div>
         <div class="menu-wrap">
           <a href="contact-us-rtl.html" class="nav-link">تواصل معنا</a>
-          <a href="our-ownership-rlt.html" class="nav-link">الادارة</a>
           <a href="our-players-rtl.html" class="nav-link">لاعبينا</a>
           <a href="about-us-rtl.html" aria-current="page" class="nav-link w--current">الوكالة</a>
           <a href="home-3-rtl.html" class="nav-link">الصفحة الرئيسية</a>
@@ -545,15 +543,19 @@
   </section>
   <section class="section">
     <div class="w-layout-blockcontainer full-width-container partners-block-container w-container">
-      <div class="partners-wrapper">
+      <div class="partners-wrapper home-3-partners">
         <div class="rectangle left"></div>
-        <div class="rectangle right-bottom"></div>
-        <div class="rectangle right-top"></div>
+                <div class="rectangle right-bottom"></div>
+                <div class="rectangle right-top"></div>
         <div class="rectangle left-bottom"></div>
-        <h6 data-w-id="89230128-ee0e-bbcd-6366-155ea524da42" style="opacity:0">شركاؤنا</h6>
-        <div data-w-id="89230128-ee0e-bbcd-6366-155ea524da44" style="opacity:0" class="w-layout-grid partners-logo-grid"><img src="images/Fictional-company-logo-7.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da45-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-1.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da46-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-2.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da47-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-3.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da48-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-4.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da49-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-5.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da4a-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-6.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da4b-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-7.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da4c-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-8.png" loading="lazy" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da4d-2f210c9c" alt="Company Logo"><img src="images/Fictional-company-logo-9.png" loading="lazy" width="140" id="w-node-_89230128-ee0e-bbcd-6366-155ea524da4e-2f210c9c" alt="Company Logo" class="logo-image"></div>
-      </div>
-    </div>
+        <h6 data-w-id="b74d266c-66de-023d-761d-af25e53b8b0d">شركاؤنا</h6>
+        <div data-w-id="b74d266c-66de-023d-761d-af25e53b8b0f" class="w-layout-grid partners-logo-grid"><img src="templates/p1.png" loading="lazy" id="w-node-b74d266c-66de-023d-761d-af25e53b8b10-8aba9450" alt="Company Logo">
+          <img src="templates/p2.png" loading="lazy" id="w-node-b74d266c-66de-023d-761d-af25e53b8b11-8aba9450" alt="Company Logo">
+          <img src="templates/p5.png" loading="lazy" id="w-node-b74d266c-66de-023d-761d-af25e53b8b14-8aba9450" alt="Company Logo">
+          <img src="templates/p4.png" loading="lazy" id="w-node-b74d266c-66de-023d-761d-af25e53b8b15-8aba9450" alt="Company Logo"></div>
+              </div>
+  
+            </div>
   </section>
   <div class="footer rtl">
     <div class="base-container w-container">
