--- a/our-ownership-rlt.html
+++ b/our-ownership-rlt.html
@@ -418,7 +418,6 @@
           <!-- Mobile Navigation Links -->
           <div class="mobile-nav-links">
             <a href="contact-us-rtl.html" class="nav-link mobile-nav-link">تواصل معنا</a>
-            <a href="our-ownership-rlt.html" class="nav-link mobile-nav-link">الادارة</a>
             <a href="our-players-rtl.html" class="nav-link mobile-nav-link">لاعبينا</a>
             <a href="about-us-rtl.html" aria-current="page" class="nav-link mobile-nav-link w--current">الوكالة</a>
             <a href="home-3-rtl.html" class="nav-link mobile-nav-link">الصفحة الرئيسية</a>
@@ -426,7 +425,6 @@
         </div>
         <div class="menu-wrap">
           <a href="contact-us-rtl.html" class="nav-link">تواصل معنا</a>
-          <a href="our-ownership-rlt.html" class="nav-link">الادارة</a>
           <a href="our-players-rtl.html" class="nav-link">لاعبينا</a>
           <a href="about-us-rtl.html" aria-current="page" class="nav-link w--current">الوكالة</a>
           <a href="home-3-rtl.html" class="nav-link">الصفحة الرئيسية</a>
@@ -452,7 +450,7 @@
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="ownership-section">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div data-w-id="7bd55b61-3182-3cae-fc62-3c576147a878" style="opacity:0" class="full-width-owner-table-wrapper">
         <div class="line ownership-line"></div>
