--- a/home-3-rtl.html
+++ b/home-3-rtl.html
@@ -11,6 +11,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/sports-vision-fe0d13.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/custom-animations.css" rel="stylesheet" type="text/css">
+  <link href="css/players-navbar-fix.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -2972,7 +2973,211 @@
     .elementor-counter-number-suffix {
       color: #58bb4f;
     }
+/* CRITICAL RTL NAVBAR FIX - MAXIMUM SPECIFICITY */
+html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu-wrapper {
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: flex-start !important;
+  align-items: center !important;
+  width: 100% !important;
+  padding: 0 20px !important;
+  position: relative !important;
+}
 
+/* FORCE LOGO TO RIGHT SIDE USING MARGIN */
+html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu-wrapper > img {
+  position: absolute !important;
+  right: 20px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  margin: 0 !important;
+  flex-shrink: 0 !important;
+  z-index: 10 !important;
+}
+
+/* FORCE MENU BUTTON TO LEFT SIDE USING MARGIN */
+html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .menu-button {
+  position: absolute !important;
+  left: 20px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  margin: 0 !important;
+  flex-shrink: 0 !important;
+  z-index: 10 !important;
+}
+
+/* CENTER NAVIGATION */
+html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu {
+  flex: 1 !important;
+  display: flex !important;
+  justify-content: center !important;
+  margin: 0 120px !important;
+  position: relative !important;
+  z-index: 5 !important;
+}
+
+/* HIDE BRAND LINK */
+html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .brand {
+  display: none !important;
+}
+
+/* CRITICAL MOBILE RTL FIX - OVERRIDE ALL EXISTING MOBILE STYLES */
+@media screen and (max-width: 991px) {
+  /* Mobile navbar container - force RTL layout */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu-wrapper {
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    width: 100% !important;
+    padding: 0 20px !important;
+    position: relative !important;
+    min-height: 70px !important;
+    direction: ltr !important; /* Force LTR for proper positioning */
+  }
+  
+  /* MOBILE MENU BUTTON - ABSOLUTE LEFT POSITIONING */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .menu-button {
+    position: absolute !important;
+    left: 20px !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+    order: 1 !important;
+    margin: 0 !important;
+    z-index: 10002 !important;
+    width: 40px !important;
+    height: 40px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    cursor: pointer !important;
+    background: transparent !important;
+    border: none !important;
+  }
+  
+  /* MOBILE LOGO - ABSOLUTE RIGHT POSITIONING */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu-wrapper > img {
+    position: absolute !important;
+    right: 20px !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+    order: 3 !important;
+    margin: 0 !important;
+    width: 80px !important;
+    height: auto !important;
+    flex-shrink: 0 !important;
+    z-index: 10001 !important;
+  }
+  
+  /* HIDE DESKTOP NAVIGATION ON MOBILE */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .nav-menu {
+    display: none !important;
+  }
+  
+  /* HIDE DESKTOP MENU WRAP ON MOBILE */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .menu-wrap {
+    display: none !important;
+  }
+  
+  /* MOBILE OVERLAY - FULL SCREEN RTL */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .w-nav-overlay {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    background-color: rgba(0, 0, 0, 0.95) !important;
+    z-index: 99999 !important;
+    display: none !important;
+    direction: rtl !important;
+  }
+  
+  /* WHEN MOBILE MENU IS OPEN */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .w-nav-overlay[style*="display: block"] {
+    display: block !important;
+  }
+  
+  /* MOBILE MENU CONTENT STRUCTURE */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .w-nav-overlay .w-nav-menu {
+    position: static !important;
+    width: 100% !important;
+    height: 100vh !important;
+    background: transparent !important;
+    display: flex !important;
+    flex-direction: column !important;
+    direction: rtl !important;
+  }
+  
+  /* TABLET MENU CONTAINER */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .w-nav-overlay .tablet-menu {
+    display: flex !important;
+    flex-direction: column !important;
+    width: 100% !important;
+    height: 100% !important;
+    padding: 0 !important;
+    direction: rtl !important;
+    text-align: right !important;
+  }
+  
+  /* MOBILE MENU HEADER */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .mobile-menu-header {
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+    padding: 20px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+    direction: rtl !important;
+    min-height: 80px !important;
+  }
+  
+  /* CLOSE BUTTON */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .close-menu-button {
+    width: 30px !important;
+    height: 30px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    cursor: pointer !important;
+    z-index: 10003 !important;
+    background: transparent !important;
+    border: none !important;
+  }
+  
+  /* MOBILE NAVIGATION LINKS CONTAINER */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .mobile-nav-links {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 0 !important;
+    padding: 20px 0 !important;
+    direction: rtl !important;
+    width: 100% !important;
+    flex: 1 !important;
+  }
+  
+  /* INDIVIDUAL MOBILE LINKS */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .mobile-nav-link {
+    display: block !important;
+    padding: 20px 20px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+    text-align: right !important;
+    font-size: 20px !important;
+    color: white !important;
+    text-decoration: none !important;
+    transition: all 0.3s ease !important;
+    width: 100% !important;
+    direction: rtl !important;
+  }
+  
+  /* MOBILE LINK HOVER AND CURRENT STATE */
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .mobile-nav-link:hover,
+  html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .mobile-nav-link.w--current {
+    color: #c7f849 !important;
+    background-color: rgba(199, 248, 73, 0.1) !important;
+    padding-right: 30px !important;
+  }
+}
     /* Responsive */
   </style>
 
@@ -2993,7 +3198,6 @@
           <!-- Mobile Navigation Links -->
           <div class="mobile-nav-links">
             <a href="contact-us-rtl.html" class="nav-link mobile-nav-link">تواصل معنا</a>
-            <a href="our-ownership-rlt.html" class="nav-link mobile-nav-link">الادارة</a>
             <a href="our-players-rtl.html" class="nav-link mobile-nav-link">لاعبينا</a>
             <a href="about-us-rtl.html" aria-current="page" class="nav-link mobile-nav-link w--current">الوكالة</a>
             <a href="home-3-rtl.html" class="nav-link mobile-nav-link">الصفحة الرئيسية</a>
@@ -3001,7 +3205,6 @@
         </div>
         <div class="menu-wrap">
           <a href="contact-us-rtl.html" class="nav-link">تواصل معنا</a>
-          <a href="our-ownership-rlt.html" class="nav-link">الادارة</a>
           <a href="our-players-rtl.html" class="nav-link">لاعبينا</a>
           <a href="about-us-rtl.html" aria-current="page" class="nav-link w--current">الوكالة</a>
           <a href="home-3-rtl.html" class="nav-link">الصفحة الرئيسية</a>
@@ -3531,7 +3734,7 @@
   <section class="podcast-section" data-w-id="podcast-section-animation">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <!-- Animated Background Image -->
-      <img src="images/1600-5842x.png" loading="lazy" width="1057" data-w-id="3dc6faea-22ed-5889-f53e-738f12c7c403" alt="Sports Vision Background" srcset="images/1600-5842x-p-500.png 500w, images/1600-5842x-p-800.png 800w, images/1600-5842x-p-1080.png 1080w, images/1600-5842x.png 1600w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="about-us-background-photo podcast-bg-image">
+      <img src="images/1600-5842x.png" loading="lazy" width="1557" data-w-id="3dc6faea-22ed-5889-f53e-738f12c7c403" alt="Sports Vision Background" srcset="images/1600-5842x-p-500.png 500w, images/1600-5842x-p-800.png 800w, images/1600-5842x-p-1080.png 1080w, images/1600-5842x.png 1600w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="about-us-background-photo podcast-bg-image">
       
       <!-- Animated Overlay Elements -->
       <div class="podcast-overlay-elements">
